gbs-timed-elementary-math/src/app/mathgame/mathgame.component.css
@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";

body {
    margin: 0;
    font-family: sans-serif;
    height: 100%;
}

h1 {
    text-align: center;
}

.expanded-toolbar {
    justify-content: space-between;
    align-items: center;
  }

.heading {
    margin: auto;
    font-size: 130%;
}

.choice {
    margin: 0 5px 0 5px;
}

.heading2 {
    margin: auto;
    font-size: 110%;
}

.navspacing {
    width:100%;
}

.spacer {
    flex: 1 1 auto;
  }


body {
    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
}

.mat-input-width {
    width: 25%;
  }
  
@media only screen and (max-width: 600px) {
    .mat-input-width {
        width: 100%;
    }
}

.options {
    font-size: 15px;
    margin: 0 0 0 0;
}

.container3 {
    margin: 0 0% 0 0%;
    display: flex;
    flex-flow: column;
    height: 100%;
}

.page2 {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    position: relative;
}

.page2 h3 {
    margin: 5% 0 0 0;
}

.page2 h1 {
    margin: 5% 0 5% 0;
}

.page2 button {
    margin: 2% 0 5% 0;
}

.hidden1 {
    visibility: hidden;
}

input[type="checkbox"]:checked + label:before {
    background: #fff;
    color: rgb(40, 212, 83);
    content: "\2713";
    text-align: center;
    margin-right: 5px;
}
input[type="checkbox"]:checked + label:after {
    font-weight: bold;
}

p {
 font-size: 20px;
 font-weight: bold;
}

.page3 {

}

.page3 h2 {
    color: #3F51B5;
}

